tests/snapshots/lib__snapshots__legacy@parse_spec_blank_level_isolated.env_filter.snap
---
source: tests/snapshots.rs
expression: "     "
---
error

1 directives were ignored as invalid

  ⚠ invalid target specified
   ╭────
 1 │      
   · ─────
   ╰────


