tests/snapshots/lib__snapshots__legacy@parse_spec_global_bare_warn_lc.env_filter.snap
---
source: tests/snapshots.rs
expression: warn
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: None,
                        fields: [],
                        level: LevelFilter::WARN,
                    },
                ],
            },
        },
        level: LevelFilter::WARN,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
(no warnings)
