tests/snapshots/lib__snapshots__legacy@parse_spec_invalid_crate_filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error=warn,crate2=debug/a.c"
---
error

  × some directives had no effect

Error: 
  ⚠ 2 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error=warn,crate2=debug/a.c
   ·              ──────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE
Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error=warn,crate2=debug/a.c
   ·                                ─────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

